Custom--app/main/default/objects/Property_Conversion_Maching_For_Approval__c/Property_Conversion_Maching_For_Approval__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for Property Conversion Maching for Approval</description>
    <label>Mapping</label>
</CustomObject>