Custom--app/main/default/objects/Property_Conversion_Maching_For_Approval__c/fields/Mapping_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Name__c</fullName>
    <label>Mapping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>