Custom--app/main/default/objects/Property_Conversion_Maching_For_Approval__c/fields/Target_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_API_Name__c</fullName>
    <label>Target API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>